--- a/index.html
+++ b/index.html
@@ -67,6 +67,81 @@
                 <img class="photo-grid__image" src="./blocks/Images/photo-grid-road.jpg" alt="road">
             </section>
 
+            <section class="places">
+                <div class="place">
+                    <h2 class="place__title">Maine</h2>
+                    <img class="place__image" src="./blocks/Images/place-maine.jpg" alt="Maine bich">
+                    <div class="place__website">
+                        <p class="palce__url-heading">URL</p>
+                        <a class="place__link"
+                            href="https://global.llbean.com/shop/L.L.Bean-Continental-Rucksack/122952.html?bc=50-816&csp=f&feat=816-GN1">global.llbean.com</a>
+                    </div>
+                    <p class="place__paragraph">Still, as sparsely populated as it was in the 1600s, this is an
+                        extraordinary and highly underrated state full of rich history and majestic natural beauty.
+                        Maine is the main state you want to be sure not to miss. As your journey is going to be a long
+                        one, you had best be prepared for an arduous trek.</p>
+                    <p class="place__paragraph">Thankfully, not only is Maine home to the very first European settlers
+                        on US territory in the era of Vikings, but is also home to L.L. Bean, which is a great company
+                        to grab a super sturdy backpack from for your 3-month expedition. </p>
+                    <p class="place__paragraph">Average cost: $80-100.</p>
+                </div>
+                <div class="place">
+                    <h2 class="place__title">New Hampshire</h2>
+                    <img class="place__image" src="./blocks/Images/place-new-hampshire.jpg" alt="New Hampshire valley">
+                    <div class="place__website">
+                        <p class="palce__url-heading">URL</p>
+                        <a class="place__link" href="">timberland.com</a>
+                    </div>
+                    <p class="place__paragraph">There's no better place to lose yourself in nature than in springtime
+                        New Hampshire. As serene and beautiful as it was in the 1700s, this state is still much less
+                        traveled than its neighbors to the South. So enjoy it while it lasts.</p>
+                    <p class="place__paragraph">You won't be on your bike the whole time, so doesn't it make sense to
+                        pick up some extra footwear? Fortunately for you, the best outdoor shoe company in the history
+                        of the world proudly hails from this state. Cycle by the Timberland headquarters in Stratham,
+                        and pick up a pair of rugged, waterproof boots to keep your feet dry. Fitting for unpredictable
+                        weather you may be confronted by while passing through the Appalachians. These boots are also
+                        better than cycling shoes when pitching a tent.</p>
+                    <p class="place__paragraph">Average cost: $100-150.</p>
+                </div>
+                <div class="place">
+                    <h2 class="place__title">New York</h2>
+                    <img class="place__image" src="./blocks/Images/place-new-york.jpg" alt="road at New York">
+                    <div class="place__website">
+                        <p class="palce__url-heading">URL</p>
+                        <a class="place__link" href="">ge.com</a>
+                    </div>
+                    <p class="place__paragraph">Not only famous for “The Big Apple,” the state of NY also has several
+                        other reasons for going down in history. Since the late 1800s Schenectady, “The City that Lights
+                        and Hauls the World,” has been home to the world-famous General Electric Company.</p>
+                    <p class="place__paragraph">This is where modern power generators were born as well as contemporary
+                        means of transmitting energy. So we figured this would be the perfect place to find a
+                        batteryless dynamo light for your bicycle to help you see through those dark lonely roads on
+                        your adventure. Such a light from GE will set you back about $10-20.</p>
+                </div>
+                <div class="place">
+                    <h2 class="place__title"></h2>
+                    <img class="place__image" src="" alt="">
+                    <div class="place__website">
+                        <p class="palce__url-heading">URL</p>
+                        <a class="place__link" href=""></a>
+                    </div>
+                    <p class="place__paragraph"></p>
+                    <p class="place__paragraph"></p>
+                    <p class="place__paragraph"></p>
+                </div>
+                <div class="place">
+                    <h2 class="place__title"></h2>
+                    <img class="place__image" src="" alt="">
+                    <div class="place__website">
+                        <p class="palce__url-heading">URL</p>
+                        <a class="place__link" href=""></a>
+                    </div>
+                    <p class="place__paragraph"></p>
+                    <p class="place__paragraph"></p>
+                    <p class="place__paragraph"></p>
+                </div>
+            </section>
+
         </main>
 
         <footer class="footer">
