--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
 
         <header class="header">
             <img class="header__logo" src="./blocks/Images/logo.svg" alt="logo">
-            <a class="header__lang-link" href="#">En</a>
-            <a class="header__lang-link" href="#">Es</a>
+            <nav>
+                <ul class="header__nav-list">
+                    <li><a class="header__nav-link" href="#">En</a></li>
+                    <li><a class="header__nav-link" href="#">Es</a></li>
+                </ul>
+            </nav>
         </header>
         <main>
             <section class="lead">
@@ -23,7 +27,7 @@
                 <p class="lead__subtitle">An epic bicycle journey from Portland, ME. to Portland, OR</p>
                 <img class="lead__image" src="./blocks/Images/lead-mountains.jpg"
                     alt="lead-mountains in black and white">
-                <p class="lead__caption">Your journey starts here</p>
+                <p class="lead__caption">YOUR JOURNEY STARTS HERE</p>
             </section>
 
             <section class="intro">
@@ -38,16 +42,16 @@
                     King's house to say hi and asking him to sign your favorite book.</p>
                 <ul class="intro__list">
                     <li>
-                        <p><span class="intro__list-span">Distance (miles)</span> 3,644</p>
+                        <span class="intro__list-span">Distance (miles)</span> 3,644
                     </li>
                     <li>
-                        <p><span class="intro__list-span">Travel time (days)</span> 22</p>
+                        <span class="intro__list-span">Travel time (days)</span> 22
                     </li>
                     <li>
-                        <p><span class="intro__list-span">Highest point (feet)</span> 9,613</p>
+                        <span class="intro__list-span">Highest point (feet)</span> 9,613
                     </li>
                     <li>
-                        <p><span class="intro__list-span">Lowest point (feet)</span> -3</p>
+                        <span class="intro__list-span">Lowest point (feet)</span> -3
                     </li>
                 </ul>
             </section>
@@ -76,76 +80,142 @@
                         <a class="place__link"
                             href="https://global.llbean.com/shop/L.L.Bean-Continental-Rucksack/122952.html?bc=50-816&csp=f&feat=816-GN1">global.llbean.com</a>
                     </div>
-                    <p class="place__paragraph">Still, as sparsely populated as it was in the 1600s, this is an
-                        extraordinary and highly underrated state full of rich history and majestic natural beauty.
-                        Maine is the main state you want to be sure not to miss. As your journey is going to be a long
-                        one, you had best be prepared for an arduous trek.</p>
-                    <p class="place__paragraph">Thankfully, not only is Maine home to the very first European settlers
-                        on US territory in the era of Vikings, but is also home to L.L. Bean, which is a great company
-                        to grab a super sturdy backpack from for your 3-month expedition. </p>
-                    <p class="place__paragraph">Average cost: $80-100.</p>
+                    <article class="place__main-text">
+                        <p class="place__paragraph">Still, as sparsely populated as it was in the 1600s, this is an
+                            extraordinary and highly underrated state full of rich history and majestic natural beauty.
+                            Maine is the main state you want to be sure not to miss. As your journey is going to be a
+                            long
+                            one, you had best be prepared for an arduous trek.</p>
+                        <p class="place__paragraph">Thankfully, not only is Maine home to the very first European
+                            settlers
+                            on US territory in the era of Vikings, but is also home to L.L. Bean, which is a great
+                            company
+                            to grab a super sturdy backpack from for your 3-month expedition. </p>
+                        <p class="place__paragraph">Average cost: $80-100.</p>
+                    </article>
                 </div>
                 <div class="place">
                     <h2 class="place__title">New Hampshire</h2>
                     <img class="place__image" src="./blocks/Images/place-new-hampshire.jpg" alt="New Hampshire valley">
                     <div class="place__website">
                         <p class="palce__url-heading">URL</p>
-                        <a class="place__link" href="">timberland.com</a>
+                        <a class="place__link" href="https://www.timberland.com/timberlandpro.html">timberland.com</a>
                     </div>
-                    <p class="place__paragraph">There's no better place to lose yourself in nature than in springtime
-                        New Hampshire. As serene and beautiful as it was in the 1700s, this state is still much less
-                        traveled than its neighbors to the South. So enjoy it while it lasts.</p>
-                    <p class="place__paragraph">You won't be on your bike the whole time, so doesn't it make sense to
-                        pick up some extra footwear? Fortunately for you, the best outdoor shoe company in the history
-                        of the world proudly hails from this state. Cycle by the Timberland headquarters in Stratham,
-                        and pick up a pair of rugged, waterproof boots to keep your feet dry. Fitting for unpredictable
-                        weather you may be confronted by while passing through the Appalachians. These boots are also
-                        better than cycling shoes when pitching a tent.</p>
-                    <p class="place__paragraph">Average cost: $100-150.</p>
+                    <article class="place__main-text">
+                        <p class="place__paragraph">There's no better place to lose yourself in nature than in
+                            springtime
+                            New Hampshire. As serene and beautiful as it was in the 1700s, this state is still much less
+                            traveled than its neighbors to the South. So enjoy it while it lasts.</p>
+                        <p class="place__paragraph">You won't be on your bike the whole time, so doesn't it make sense
+                            to
+                            pick up some extra footwear? Fortunately for you, the best outdoor shoe company in the
+                            history
+                            of the world proudly hails from this state. Cycle by the Timberland headquarters in
+                            Stratham,
+                            and pick up a pair of rugged, waterproof boots to keep your feet dry. Fitting for
+                            unpredictable
+                            weather you may be confronted by while passing through the Appalachians. These boots are
+                            also
+                            better than cycling shoes when pitching a tent.</p>
+                        <p class="place__paragraph">Average cost: $100-150.</p>
+                    </article>
                 </div>
                 <div class="place">
                     <h2 class="place__title">New York</h2>
                     <img class="place__image" src="./blocks/Images/place-new-york.jpg" alt="road at New York">
                     <div class="place__website">
                         <p class="palce__url-heading">URL</p>
-                        <a class="place__link" href="">ge.com</a>
+                        <a class="place__link" href="https://www.ge.com/about-us">ge.com</a>
                     </div>
-                    <p class="place__paragraph">Not only famous for “The Big Apple,” the state of NY also has several
-                        other reasons for going down in history. Since the late 1800s Schenectady, “The City that Lights
-                        and Hauls the World,” has been home to the world-famous General Electric Company.</p>
-                    <p class="place__paragraph">This is where modern power generators were born as well as contemporary
-                        means of transmitting energy. So we figured this would be the perfect place to find a
-                        batteryless dynamo light for your bicycle to help you see through those dark lonely roads on
-                        your adventure. Such a light from GE will set you back about $10-20.</p>
+                    <article class="place__main-text">
+                        <p class="place__paragraph">Not only famous for “The Big Apple,” the state of NY also has
+                            several
+                            other reasons for going down in history. Since the late 1800s Schenectady, “The City that
+                            Lights
+                            and Hauls the World,” has been home to the world-famous General Electric Company.</p>
+                        <p class="place__paragraph">This is where modern power generators were born as well as
+                            contemporary
+                            means of transmitting energy. So we figured this would be the perfect place to find a
+                            batteryless dynamo light for your bicycle to help you see through those dark lonely roads on
+                            your adventure. Such a light from GE will set you back about $10-20.</p>
+                    </article>
                 </div>
                 <div class="place">
-                    <h2 class="place__title"></h2>
-                    <img class="place__image" src="" alt="">
+                    <h2 class="place__title">Erie, PA</h2>
+                    <img class="place__image" src="./blocks/Images/place-pennsylvania.jpg" alt="pennsylvania nature">
                     <div class="place__website">
                         <p class="palce__url-heading">URL</p>
-                        <a class="place__link" href=""></a>
+                        <a class="place__link" href="https://www.fws.gov/refuge/erie">fws.gov</a>
                     </div>
-                    <p class="place__paragraph"></p>
-                    <p class="place__paragraph"></p>
-                    <p class="place__paragraph"></p>
+                    <article class="place__main-text">
+                        <p class="place__paragraph">Erie, Pennsylvania, not to be confused with the word “eerie,”
+                            although
+                            it can be from time to time, is another town worth passing through for several different
+                            reasons. While it might be most famously known as the scene of the Gettysburg address
+                            delivered
+                            by Mr. Lincoln during the Civil war, Pennsylvania also has produced a rather decent-sized
+                            Amish
+                            community (eerie, huh?)</p>
+                        <p class="place__paragraph">The reason we've brought you here today, if you haven't already
+                            guessed,
+                            can be summed up by using one delicious word: chocolate. Hershey's is a Pennsylvania-based
+                            company. Most likely, one of the tastiest missions you'll ever embark on during this tour,
+                            try
+                            to find an Amish friend and enjoy a bar in the National Wildlife Refuge on your way to Erie
+                            and
+                            have an extra eerie time!</p>
+                        <p class="place__paragraph">The current cost of a Hershey's Chocolate bar: about 60¢.</p>
+                    </article>
                 </div>
                 <div class="place">
-                    <h2 class="place__title"></h2>
-                    <img class="place__image" src="" alt="">
+                    <h2 class="place__title">Ohio</h2>
+                    <img class="place__image" src="./blocks/Images/place-ohio.jpg" alt="ohaio">
                     <div class="place__website">
                         <p class="palce__url-heading">URL</p>
-                        <a class="place__link" href=""></a>
+                        <a class="place__link" href="https://www.cedarpoint.com">cedarpoint.com</a>
                     </div>
-                    <p class="place__paragraph"></p>
-                    <p class="place__paragraph"></p>
-                    <p class="place__paragraph"></p>
+                    <article class="place__main-text">
+                        <p class="place__paragraph">From the college capital of Columbus to the clean coastline of
+                            Cleveland, Ohio is a truly hidden gem. Earthquakes are surprisingly common in this
+                            particular
+                            region of North America, over 200 of which have registered with a magnitude of 2 or higher
+                            since
+                            1776. However, earthquakes aren't the only thing shaking this centrally located state. One
+                            of
+                            the country's largest and oldest roller coaster parks is waiting to ROCK your world in
+                            Sandusky,
+                            Ohio! This will presumably be one of the most thrilling quests you'll ever complete
+                            (provided
+                            you can stomach it). Take a much-deserved break to ride as many roller coasters as you can
+                            before continue your bike ride!</p>
+                        <p class="place__paragraph">The cost of a daily ticket: about $100.</p>
+                    </article>
                 </div>
             </section>
 
+            <section class="cover">
+                <div class="overlay"></div>
+                <h2 class="cover__title"><a class="cover__link"
+                        href="https://www.nps.gov/nr/travel/route66/maps66.html">
+                        Historic Route 66
+                    </a></h2>
+                <p class="cover__subtitle">The Main Street of America from Santa Monica, Cal. to Chicago, Ill.</p>
+            </section>
         </main>
 
         <footer class="footer">
-
+            <ul class="footer__links">
+                <li>
+                    <a class="footer_link" href="https://yandex.com/maps">Maps</a>
+                </li>
+                <li>
+                    <a class="footer_link" href="https://yandex.com/weather/moscow">Weather</a>
+                </li>
+                <li>
+                    <a class="footer_link" href="https://calendar.yandex.ru">Calender</a>
+                </li>
+            </ul>
+            <p class="footer__copyrights">© 2021 Neta Hadar Itzhak</p>
         </footer>
 
 
