fix typo at place block

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <li class="place">
                         <h2 class="place__title">Maine</h2>
                         <div class="place__website">
-                            <p class="palce__url-heading">URL</p>
+                            <p class="place__url-heading">URL</p>
                             <a class="place__link"
                                 href="https://global.llbean.com/shop/L.L.Bean-Continental-Rucksack/122952.html?bc=50-816&csp=f&feat=816-GN1"
                                 target="_blank">global.llbean.com</a>
@@ -101,7 +101,7 @@
                     <li class="place">
                         <h2 class="place__title">New Hampshire</h2>
                         <div class="place__website">
-                            <p class="palce__url-heading">URL</p>
+                            <p class="place__url-heading">URL</p>
                             <a class="place__link" href="https://www.timberland.com/timberlandpro.html"
                                 target="_blank">timberland.com</a>
                         </div>
@@ -131,7 +131,7 @@
                     <li class="place">
                         <h2 class="place__title">New York</h2>
                         <div class="place__website">
-                            <p class="palce__url-heading">URL</p>
+                            <p class="place__url-heading">URL</p>
                             <a class="place__link" href="https://www.ge.com/about-us" target="_blank">ge.com</a>
                         </div>
                         <img class="place__image" src="./blocks/Images/place-new-york.jpg" alt="road at New York">
@@ -153,7 +153,7 @@
                     <li class="place">
                         <h2 class="place__title">Erie, PA</h2>
                         <div class="place__website">
-                            <p class="palce__url-heading">URL</p>
+                            <p class="place__url-heading">URL</p>
                             <a class="place__link" href="https://www.fws.gov/refuge/erie" target="_blank">fws.gov</a>
                         </div>
                         <img class="place__image" src="./blocks/Images/place-pennsylvania.jpg"
@@ -185,7 +185,7 @@
                     <li class="place">
                         <h2 class="place__title">Ohio</h2>
                         <div class="place__website">
-                            <p class="palce__url-heading">URL</p>
+                            <p class="place__url-heading">URL</p>
                             <a class="place__link" href="https://www.cedarpoint.com" target="_blank">cedarpoint.com</a>
                         </div>
                         <img class="place__image" src="./blocks/Images/place-ohio.jpg" alt="ohaio">
