--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <section class="lead">
                 <h1 class="lead__title">From Portland to Portland</h1>
                 <p class="lead__subtitle">An epic bicycle journey from Portland, ME. to Portland, OR</p>
-                <figure>
+                <figure class="lead__figure">
                     <img class="lead__image" src="./blocks/Images/lead-mountains.jpg"
                         alt="lead-mountains in black and white">
                     <figcaption class="lead__caption">your journey starts here</figcaption>
